<resources>
    <string name="app_name">Sfootball</string>
    <string name="beranda">Beranda</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Senin</string>
    <string name="date">8</string>
    <string name="date_time">16.00</string>
    <string name="club_1">Foc FC</string>
    <string name="club_2">Tiger FC</string>
    <string name="cup">Juragan Cup</string>
    <string name="month">Januari</string>
    <string name="year">2025</string>
    <string name="pilih_tanggal">pilih tanggal</string>
    <string name="ok">OK</string>
    <string name="jpg_png_file">jpg/png file</string>
    <string name="waktu">Waktu</string>
    <string name="waktu_angka">16.00</string>
    <string name="tanggal_angka">11/01/2025</string>
    <string name="tanggal">Tanggal</string>
    <string name="jalak_harupat">Jalak Harupat</string>
    <string name="stadion">Stadion</string>
    <string name="btn_simpan">Simpan</string>
    <string name="data_berhasil_ditambahkan">Data berhasil ditambahkan</string>
    <string name="form_harus_diisi_semua">Form harus diisi semua</string>
    <string name="belum_ada_jadwal">Belum ada jadwal pertandingan</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="club1">club1</string>
    <string name="club2">club2</string>
    <string name="club1_name_required">Nama klub 1 wajib dimasukkan</string>
    <string name="club2_name_required">Nama klub 2 wajib dimasukkan</string>
    <string name="date_required">Date is required</string>
    <string name="time_required">Time is required</string>
    <string name="club1_logo_required">Logo klub 1 wajib dimasukkan</string>
    <string name="club2_logo_required">Logo klub 2 wajib dimasukkan</string>
    <string name="permission_denied_please_allow_storage_access_to_continue">Izinkan penyimpanan untuk melanjutkan</string>
    <string name="storage_permission_rationale">untuk menunggah gambar diperlukan izin</string>
    <string name="error_saving_image">Error simpan gambar</string>
    <string name="match_added_successfully">Pertandingan berhasil ditambahkan</string>
    <string name="invalid_input">Input tidak sesuai</string>
    <string name="detail">Detail</string>
    <string name="juragan_cup">Juragan cup</string>
    <string name="selasa_14_januari_2025">Selasa, 14 Januari 2025</string>
    <string name="stadium_jalak_harupat">Stadium: %s</string>
    <string name="stadium_wajib_diisi">Stadium wajib diisi</string>
    <string name="edit">Edit</string>
    <string name="nama_club_home">Nama club home</string>
    <string name="logo_club_home">Logo club home</string>
    <string name="nama_club_away">Nama club away</string>
    <string name="foo_fc">Foo Fc</string>
    <string name="logo_club_away">Logo club away</string>
    <string name="score">Skor</string>
    <string name="skor_wajib_diisi">Skor wajib diisi</string>
    <string name="pertandingan_berhasil_dihapus">Pertandingan berhasil dihapus</string>
    <string name="delete_match">Delete Match</string>
    <string name="are_you_sure_you_want_to_delete_this_match">Are you sure you want to delete this match?</string>
    <string name="match_deleted_successfully">Match deleted successfully</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>