<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tv_club_name_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/club_1"
            android:textColor="@color/black"
            android:gravity="end"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="8dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cv_club_logo_home"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:src="@drawable/foc_fc" />

        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/date_time"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cv_club_logo_away"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:src="@drawable/tiger_fc"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tv_club_name_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/club_2"
            android:textColor="@color/black"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end" />
    </LinearLayout>
</androidx.cardview.widget.CardView>